refactor: Refactoring the codebase